fixing bug with radio labels

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <p>Please select your desired theme:</p>
         <div>
             <input type="radio" id="october" name="theme" value="OCT"> 
-            <label for="html">October</label>
+            <label for="october">October</label>
         </div>
         <div>
             <input type="radio" id="november" name="theme" value="NOV">
-            <label for="css">November</label>
+            <label for="november">November</label>
         </div>
 
         <button id="theme-button" onclick="changeTheme()">Change theme</button>
